# EDD_C

./: README.md
cola/: CMakeLists.txt  cola.c  cola.h  main.c
espaciotrabajo/: CMakeLists.txt  main.c  primer-ejer.c  principal  principal.c
memoria-dinamica/: CMakeLists.txt  devoradorMemoria  devoradorMemoria.c  ejemplo1  ejemplo1.c  ejemplo2  ejemplo2.c  ejemplo3  ejemplo3.c  ejer1  ejer1.c  fugaMemoria  fugaMemoria.c  pedirMemoria  pedirMemoria.c
memoria-dinamica/lista-enlazada/: CMakeLists.txt  listaEnlazada  listaEnlazada.c  listaEnlazada.h  principal.c
pila/: CMakeLists.txt  main.c  pila.c  pila.h
practica1/: CMakeLists.txt
practica1/src/: MainScheduler.c  MainTask.c  Scheduler.c  Task.c
punteros/: main  principal  principal.c
